--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
   },
   "dependencies": {
     "gatsby": "^2.23.12",
+    "gatsby-plugin-typography": "^2.5.10",
+    "gatsby-source-filesystem": "^2.3.22",
+    "gatsby-transformer-remark": "^2.8.26",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.0.5"
