--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.23.12",
+    "gatsby-plugin-manifest": "^2.4.20",
+    "gatsby-plugin-offline": "^3.2.20",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-source-filesystem": "^2.3.22",
     "gatsby-transformer-remark": "^2.8.26",
